fix: [AH-484]: fix breaking ui when name is too big (#2799)
* fix: [AH-484]: fix breaking ui when name is too big

--- a/web/src/ar/components/Badge/Badge.module.scss
+++ b/web/src/ar/components/Badge/Badge.module.scss
@@ -25,5 +25,6 @@
   border: 1px solid var(--grey-200);
   border-radius: 4px;
   max-width: max-content;
+  flex-shrink: 0;
   text-transform: uppercase;
 }
