--- a/web/src/ar/pages/repository-details/components/RepositoryDetailsHeader/RepositoryDetailsHeader.module.scss
+++ b/web/src/ar/pages/repository-details/components/RepositoryDetailsHeader/RepositoryDetailsHeader.module.scss
@@ -40,4 +40,8 @@
   .cursor {
     cursor: pointer;
   }
+
+  .nameContainer {
+    flex-shrink: 1;
+  }
 }
