--- a/web/src/ar/pages/upstream-proxy-details/components/UpstreamProxyDetailsHeader/UpstreamProxyDetailsHeader.module.scss
+++ b/web/src/ar/pages/upstream-proxy-details/components/UpstreamProxyDetailsHeader/UpstreamProxyDetailsHeader.module.scss
@@ -25,4 +25,8 @@
   .cursor {
     cursor: pointer;
   }
+
+  .nameContainer {
+    flex-shrink: 1;
+  }
 }
